--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyouka",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "license": "AGPL-3.0",
   "author": "kingzin.021",
   "description": "Hyouka é um bot de Discord versátil e configurável, ideal para servidores que buscam moderação eficiente, diversão garantida e uma variedade de utilidades. Com ferramentas poderosas e flexíveis, Hyouka se adapta às necessidades do seu servidor, proporcionando uma experiência personalizada e envolvente para todos os membros.",
@@ -33,6 +33,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.15.3",
     "fs": "^0.0.1-security",
+    "moment": "^2.30.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
